# xtdb

./: .dir-locals.el  .dockerignore  .editorconfig  .gitignore  .gitmodules  .lein-classpath  .mcp.json  .profile  .projectile  .rgignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.adoc  DATALOG.adoc  Dockerfile  FAQ.adoc  HACKING.adoc  LICENSE  LICENSE-deps.adoc  Makefile  README.adoc  README.md  README_NEW.adoc  SECURITY.md  THIRD_PARTY_NOTICES  THIRD_PARTY_NOTICES.xml  amplify.yml  background.md  bibliography.org  build-ebs.sh  build.gradle.kts  c2-in-classic.md  codox.edn  core2.org  crux-console-conf.sample.edn  data-model.md  deps.edn  detect_versions.bb  docker-bake.hcl  docker-compose.yml  (+12 more)
.circleci/: aerobatic_deploy.sh  commit_check.sh  config.yml
.clj-kondo/: .gitignore  config.edn  hooks.clj
.devcontainer/: README.md  devcontainer.json  docker-compose.yml  xtdb.yaml
.githooks/: pre-commit
.github/: dependabot.yml
.lsp/: config.edn
.run/: IOUFlowTests.run.xml
allium/: live-index.allium  log-processor-lifecycle.allium  memory-hash-trie.allium
api/: build.clj  build.gradle.kts  deps.edn  java.sql.Driver  project.clj
azure-setup-guide/: README.adoc
bench/: Dockerfile  README.md  cloudformation.yaml  docker-compose.yml  project.clj
buildSrc/: build.gradle.kts
checkouts/: azure-blobs  bench  client  cloud  corda  crux-azure-blobs  crux-bench  crux-calcite  crux-cli  crux-core  crux-decorators  crux-http-client  crux-http-server  crux-jdbc  crux-kafka  crux-kafka-connect  crux-kafka-embedded  crux-lmdb  crux-lucene  crux-metrics  crux-rdf  crux-rocksdb  crux-s3  crux-sql  crux-test  datasets  google-cloud-storage  graal  http-client  http-server  jdbc  kafka  kafka-connect  kafka-embedded  lmdb  lucene  metrics  rdf  rocksdb  s3  (+1 more)
client/: deps.edn  project.clj
cloud/: crux-cloud.yml  public-lb.yml  update-stack.sh  xtdb-vpc.yml
cloud-benchmark/: build.gradle.kts
cloudformation/: xtdb_alb.yml  xtdb_ecs.yml  xtdb_msk.yml  xtdb_s3.yml  xtdb_vpc.yml
corda-contract/: build.gradle.kts
corda-workflow/: build.gradle.kts
core/: .gitignore  README.adoc  build.clj  build.gradle.kts  deps.edn  org.apache.arrow.adbc.drivermanager.AdbcDriverFactory  project.clj
crux-azure-blobs/: README.adoc  project.clj
crux-bench/: .dir-locals.el  Dockerfile  Dockerfile.base  README.md  cloudformation.yaml  logback.xml  project.clj  stress-test-rdf.edn
crux-bench-watdiv/: .gitignore  .lein-classpath  Dockerfile  project.clj
crux-blobs/: README.adoc  project.clj
crux-build/: build-crux.sh  build-tar.sh  console-deps.edn  deps-in-memory.edn  deps-standalone-rocksdb.edn  deps.edn  sql-deps.edn
crux-calcite/: README.adoc  project.clj
crux-cli/: Dockerfile  project.clj
crux-cloud/: crux-cloud.yml  public-lb.yml  update-stack.sh  vpc.yml
crux-compactor/: README.adoc  project.clj
crux-console/: .gitignore  .lein-classpath  LICENSE  Makefile  deps.edn  package.json  project.clj  readme.md  shadow-cljs.edn
crux-corda/: build.gradle.kts
crux-corda-service/: build.gradle.kts
crux-core/: .lein-classpath  README.adoc  crux-core  pom.xml  project.clj
crux-dataflow/: README.md
crux-decorators/: README.adoc  project.clj
crux-dev/: README.adoc  pom.xml  project.clj
crux-docker/: Dockerfile  README.md  crux.edn  deps.edn  docker-compose.dev.yml  docker-compose.kafka.yml  docker-compose.yml  logback.xml
crux-generate-api/: README.md  project.clj
crux-google-cloud-storage/: README.adoc  project.clj
crux-graal/: project.clj
crux-http-client/: README.adoc  project.clj
crux-http-server/: .gitignore  README.adoc  dev.cljs.edn  figwheel-main.edn  latofonts.css  project.clj
crux-jdbc/: README.adoc  docker-compose.yml  project.clj
crux-kafka/: README.adoc  project.clj
crux-kafka-connect/: README.adoc  project.clj
crux-kafka-embedded/: README.adoc  project.clj
crux-lmdb/: README.adoc  project.clj
crux-lucene/: README.adoc  project.clj
crux-metrics/: README.adoc  README.md  project.clj
crux-rdf/: project.clj
crux-rocksdb/: README.adoc  project.clj
crux-s3/: README.adoc  project.clj
crux-sql/: README.adoc  project.clj
crux-test/: .gitignore  README.adoc  logback.xml  pom.xml  project.clj
crux-uberjar/: .lein-classpath  README.adoc  project.clj
deploy/: ami_packer_template.json
deployment/: README.md
docs/src/content/docs/adbc/examples/rust/: Cargo.toml
docs/src/content/docs/drivers/adbc/examples/rust-arrow-pipeline/: Cargo.toml
docs/src/content/docs/drivers/adbc/examples/rust-arrow-pipeline/src/: main.rs
lang/python/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
lang/python/test/: copy_test.py  test_psycopg.py  test_true.py
lang/python/xtdb/: __init__.py  expr.py  tx.py  types.py  xt_json.py
lang/python/xtdb/test/: conftest.py  test_client.py  test_db_api.py  test_encoding.py  test_pgwire.py
lang/python/xtdb_juxt/: __init__.py  binding.py  expr.py  query.py  temporal_filter.py  tx.py  types.py  xt_json.py
lang/python/xtdb_juxt/test/: test_encoding.py
lang/rust/: Cargo.toml  Dockerfile
lang/rust/src/: lib.rs
lang/rust/tests/: integration_test.rs
(+9258 files in other folders)
