[tool.poetry]
name = "xtdb"
version = "0.0.3-dev0"
description = ""
authors = ["XTDB Team <hello@xtdb.com>"]
license = "MPL-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
urllib3 = "^2.2.2"
python-dateutil = "^2.8.2"
mypy = "^1.9.0"
sqlparse = "^0.5.0"
psycopg = {extras = ["binary"], version = "^3.2.1"}

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
requests = "*"

[tool.pytest_ini.options]
testpaths = [
          "xtdb/test/"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

