[tool.poetry]
name = "xtdb"
version = "0.0.3-dev0"
description = ""
authors = ["XTDB Team <hello@xtdb.com>"]
license = "MPL-2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
psycopg = {extras = ["binary"], version = "^3.2.3"}

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
mypy = "^1.9.0"

[tool.pytest_ini.options]
testpaths = ["test/"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

