[package]
name = "xtdb"
version = "0.1.0-pre.1"
edition = "2021"
description = "Rust client for XTDB"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
homepage = "https://xtdb.com/"
repository = "https://github.com/xtdb/xtdb"
license = "MPL-2.0"

[dependencies]
